--- a/examples/css/generic.css
+++ b/examples/css/generic.css
@@ -1,12 +1,37 @@
 :root {
   --bezierAnimation: cubic-bezier(0.76, 0.01, 0.98, -0.11);
   --color: rgba(120, 0, 0);
-  --dimensions: 200px;
+  --dimensions: 400px;
+}
+
+.fullscreen {
+  height: 100vh;
+  width: 100vw;
+}
+
+.flex {
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .generic {
-  height: calc(var(--dimensions) * 2);
-  width: calc(var(--dimensions) * 2);
+  height: calc(var(--dimensions));
+  width: calc(var(--dimensions));
   background: red;
   cursor: pointer;
+  border-radius: 50%;
+}
+
+.s {
+  height: calc(var(--dimensions) / 2);
+  width: calc(var(--dimensions) / 2);
+}
+
+.xs {
+  height: calc(var(--dimensions) / 8);
+  width: calc(var(--dimensions) / 8);
+}
+
+.bordered {
+  outline: 1px solid black;
 }
