--- a/examples/css/generic.css
+++ b/examples/css/generic.css
@@ -2,6 +2,7 @@
   --bezierAnimation: cubic-bezier(0.76, 0.01, 0.98, -0.11);
   --color: rgba(120, 0, 0);
   --dimensions: 400px;
+  overflow: hidden;
 }
 
 .fullscreen {
