--- a/examples/css/spiral.css
+++ b/examples/css/spiral.css
@@ -1,12 +1,12 @@
 body {
-  background: linear-gradient(
-    to top,
-    #ff4d0f,
-    #ff740f
-  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: #444;
 }
 
 #jewel {
-  width: 50px;
-  height: 50px;
+    width: 50px;
+    height: 50px;
+}
+
+.jewel-copy {
+    position: absolute;
 }
