--- a/examples/css/spiral.css
+++ b/examples/css/spiral.css
@@ -1,12 +1,24 @@
 body {
-    background: #444;
+    background: #000;
 }
 
-#jewel {
+/* #jewel {
     width: 50px;
     height: 50px;
 }
 
 .jewel-copy {
     position: absolute;
+} */
+
+.spiral-item {
+    opacity: 1;
+    position: absolute;
+    height: 50px;
+    width: 50px;
+    /* border: 1px solid black; */
+    background: #ff0000;
+    /* box-shadow: 0 0 3px rgba(255, 0, 0, 1); */
+    border-radius: 50%;
+    transition: all 2s;
 }
